// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect component with checkbox false should render correctly with all the props given 1`] = `
.c10 {
  font-size: 12px;
  cursor: pointer;
}

.c10 * {
  fill: #616161;
}

.c14 {
  font-size: 16px;
  cursor: pointer;
}

.c14 * {
  fill: #616161;
}

.c8 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c16 {
  font-size: 14px;
  font-weight: 400;
  color: grey;
}

.c6 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: not-allowed;
  border: 1px solid #BDBDBD;
  background-color: #BDBDBD;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6:focus {
  outline: none;
}

.c6 .c9 * {
  fill: #ffffff;
}

.c6 .c7 + .c9 {
  cursor: not-allowed;
  margin-left: 10px;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  margin: 0px 8px 0px 0px;
  cursor: default;
}

.c3 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17 {
  grid-area: description;
  margin: 5px 0px 0px 2px;
  color: grey;
}

.c1 {
  margin: 8px 0px;
  display: grid;
  min-width: 300px;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c1 .sc-AykKI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c11 .sc-AykKI {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  overflow: hidden;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c12.c12.c12 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12:focus-within {
  border-color: #012040;
}

.c12 > * {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: not-allowed;
  background-color: #E0E0E0;
}

.c13::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c13::-moz-placeholder {
  color: #9E9E9E;
}

.c13:-ms-input-placeholder {
  color: #9E9E9E;
}

.c13::placeholder {
  color: #9E9E9E;
}

.c13::-webkit-file-upload-button {
  visibility: hidden;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c4 .sc-fzXfLT {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  border: 1px solid #E0E0E0;
  background-color: #E0E0E0;
  cursor: not-allowed;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(100% - 0px);
}

.c5 * {
  cursor: not-allowed;
}

.c5 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 .c0 > * {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c5:focus-within {
  border-color: #012040;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    <label
      class="c2 c3"
      for="medly-multiSelect"
    >
      Pharmacy
    </label>
    <div
      class="c4"
      id="medly-popover-wrapper"
    >
      <div
        class="c5"
        disabled=""
        id="medly-multiSelect-container"
      >
        <button
          class="c6"
          disabled=""
        >
          <span
            class="c7 c8"
          >
            All
          </span>
          <svg
            class="c9 c10"
            height="1em"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="c0 c11"
          id="medly-multiSelect-input-field"
        >
          
          <div
            class="sc-AykKI c12"
          >
            <input
              autocomplete="off"
              class="c13"
              disabled=""
              id="medly-multiSelect-input"
              placeholder="1 options selected"
              type="text"
              value=""
            />
          </div>
          
        </div>
        <svg
          class="c9 c14 c15"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
    </div>
    <span
      class="c7 c16 c17"
    >
      We will show reports based on Pharmacy
    </span>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox false should render correctly with default props 1`] = `
.c7 {
  font-size: 16px;
  cursor: pointer;
}

.c7 * {
  fill: #616161;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .sc-AykKI {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .sc-AykKI {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  overflow: hidden;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c5.c5.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5:focus-within {
  border-color: #012040;
}

.c5 > * {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c6::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c6::-moz-placeholder {
  color: #9E9E9E;
}

.c6:-ms-input-placeholder {
  color: #9E9E9E;
}

.c6::placeholder {
  color: #9E9E9E;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .sc-fzXfLT {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 * {
  cursor: pointer;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 > * {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3:focus-within {
  border-color: #012040;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    
    <div
      class="c2"
      id="medly-popover-wrapper"
    >
      <div
        class="c3"
        id="medly-multiSelect-container"
      >
        <div
          class="c0 c4"
          id="medly-multiSelect-input-field"
        >
          
          <div
            class="sc-AykKI c5"
          >
            <input
              autocomplete="off"
              class="c6"
              id="medly-multiSelect-input"
              placeholder="Please Select . . ."
              type="text"
              value=""
            />
          </div>
          
        </div>
        <svg
          class="c7 c8"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with all the props given 1`] = `
.c10 {
  font-size: 12px;
  cursor: pointer;
}

.c10 * {
  fill: #616161;
}

.c14 {
  font-size: 16px;
  cursor: pointer;
}

.c14 * {
  fill: #616161;
}

.c8 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c16 {
  font-size: 14px;
  font-weight: 400;
  color: grey;
}

.c6 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: not-allowed;
  border: 1px solid #BDBDBD;
  background-color: #BDBDBD;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6:focus {
  outline: none;
}

.c6 .c9 * {
  fill: #ffffff;
}

.c6 .c7 + .c9 {
  cursor: not-allowed;
  margin-left: 10px;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  margin: 0px 8px 0px 0px;
  cursor: default;
}

.c3 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17 {
  grid-area: description;
  margin: 5px 0px 0px 2px;
  color: grey;
}

.c1 {
  margin: 8px 0px;
  display: grid;
  min-width: 300px;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c1 .sc-AykKI {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c11 .sc-AykKI {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  overflow: hidden;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c12.c12.c12 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12:focus-within {
  border-color: #012040;
}

.c12 > * {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: not-allowed;
  background-color: #E0E0E0;
}

.c13::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c13::-moz-placeholder {
  color: #9E9E9E;
}

.c13:-ms-input-placeholder {
  color: #9E9E9E;
}

.c13::placeholder {
  color: #9E9E9E;
}

.c13::-webkit-file-upload-button {
  visibility: hidden;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c4 .sc-fzXfLT {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  border: 1px solid #E0E0E0;
  background-color: #E0E0E0;
  cursor: not-allowed;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: calc(100% - 0px);
}

.c5 * {
  cursor: not-allowed;
}

.c5 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 .c0 > * {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c5:focus-within {
  border-color: #012040;
}

.c15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    <label
      class="c2 c3"
      for="medly-multiSelect"
    >
      Pharmacy
    </label>
    <div
      class="c4"
      id="medly-popover-wrapper"
    >
      <div
        class="c5"
        disabled=""
        id="medly-multiSelect-container"
      >
        <button
          class="c6"
          disabled=""
        >
          <span
            class="c7 c8"
          >
            All
          </span>
          <svg
            class="c9 c10"
            height="1em"
            viewBox="0 0 352 512"
            width="1em"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="c0 c11"
          id="medly-multiSelect-input-field"
        >
          
          <div
            class="sc-AykKI c12"
          >
            <input
              autocomplete="off"
              class="c13"
              disabled=""
              id="medly-multiSelect-input"
              placeholder="1 options selected"
              type="text"
              value=""
            />
          </div>
          
        </div>
        <svg
          class="c9 c14 c15"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
    </div>
    <span
      class="c7 c16 c17"
    >
      We will show reports based on Pharmacy
    </span>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with default props 1`] = `
.c7 {
  font-size: 16px;
  cursor: pointer;
}

.c7 * {
  fill: #616161;
}

.c1 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c1 .sc-AykKI {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  margin: 8px 8px 8px 0px;
  display: inline-grid;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c4 .sc-AykKI {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #E0E0E0;
  border-radius: 5px;
  overflow: hidden;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c5.c5.c5 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5:focus-within {
  border-color: #012040;
}

.c5 > * {
  padding: 8px;
  font-size: 14px;
  font-weight: 400;
  color: #616161;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c6::-webkit-input-placeholder {
  color: #9E9E9E;
}

.c6::-moz-placeholder {
  color: #9E9E9E;
}

.c6:-ms-input-placeholder {
  color: #9E9E9E;
}

.c6::placeholder {
  color: #9E9E9E;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c2 .sc-fzXfLT {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  border: 1px solid #E0E0E0;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 * {
  cursor: pointer;
}

.c3 .c0 {
  margin: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .c0 > * {
  margin: 0px;
  border: none;
  background-color: transparent;
}

.c3:focus-within {
  border-color: #012040;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 20px;
  margin-right: 8px;
  font-size: 10px;
}

<div>
  <div
    class="c0 c1"
    id="medly-multiSelect-field"
  >
    
    <div
      class="c2"
      id="medly-popover-wrapper"
    >
      <div
        class="c3"
        id="medly-multiSelect-container"
      >
        <div
          class="c0 c4"
          id="medly-multiSelect-input-field"
        >
          
          <div
            class="sc-AykKI c5"
          >
            <input
              autocomplete="off"
              class="c6"
              id="medly-multiSelect-input"
              placeholder="Please Select . . ."
              type="text"
              value=""
            />
          </div>
          
        </div>
        <svg
          class="c7 c8"
          height="1em"
          theme="[object Object]"
          viewBox="0 0 12 8"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 1.29L6 5.17 2.12 1.29A.996.996 0 1 0 .71 2.7L5.3 7.29c.39.39 1.02.39 1.41 0L11.3 2.7a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          />
        </svg>
      </div>
    </div>
    
  </div>
</div>
`;
